--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -35,6 +35,10 @@ html {
 @import './module_login/gridbox-login';
 @import './module_showcase/gridbox-showcase';
 @import './module_carousel/gridbox-carousel';
+@import './module_card/gridbox-card';
+
+// load effect modules
+@import './module_animation/gridbox-parallax';
 
 
 
