--- a/scss/module_core/gridbox-image.scss
+++ b/scss/module_core/gridbox-image.scss
@@ -1,17 +1,17 @@
 
 // images
 .img-sm {
-    width: 65px;
+    max-width: 65px;
     height: auto;
 }
 
 .img-m {
-    width: 85px;
+    max-width: 85px;
     height: auto;
 }
 
 .img-lg {
-    width: 100px;
+    max-width: 100px;
     height: auto;
 }
 
