--- a/scss/module_form/gridbox-form-button.scss
+++ b/scss/module_form/gridbox-form-button.scss
@@ -71,7 +71,7 @@ a {
 // Description: use to primary background color for hover and active state
 .btn-secondary {
     color: $information;
-    background-color: #fff;
+    // background-color: #fff;
     border: 1px solid $information;
 
     &:hover,
