--- a/scss/module_showcase/gridbox-showcase.scss
+++ b/scss/module_showcase/gridbox-showcase.scss
@@ -1,15 +1,26 @@
 %showcase {
     position: relative;
     width: 100%;
-    min-height: 80vh;
-    max-height: 90vh;
     overflow: hidden;
 }
 
 .showcase {
     @extend %showcase;
+    height: 80vh;
+
     &-carousel {
         @extend %showcase;
+        height: 80vh;
+    }
+
+    &-full-screen {
+        @extend %showcase;
+        height: 100vh;
+    }
+
+    &-narrow {
+        @extend %showcase;
+        height: 300px;
     }
 }
 
@@ -22,13 +33,10 @@
 
     img {
         display: block;
-        position: relative;
         width: 100%;
         min-width: 900px;
-        max-width: 100%;
         height: auto;
         min-height: 80vh;
-        max-height: 100%;
     }
 
     .mask {
@@ -72,5 +80,39 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+}
+
+// Parallax Effect
+.parallax {
+    overflow-x: hidden;
+    overflow-y: auto;
+    perspective: 1px;
+
+    .parallax-back {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transform: translateZ(-1px) scale(2);
+        // z-index: -1;
+        
+        img {
+            display: block;
+            // width: auto;
+            min-width: 100%;
+            height: 100%;
+            // min-height: 100vh;
+        }
+    }
+
+    .parallax-fore {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        transform: translateZ(0px);
     }
 }
