update parallax feature

--- a/scss/module_animation/gridbox-parallax.scss
+++ b/scss/module_animation/gridbox-parallax.scss
@@ -3,8 +3,9 @@
     background: {
         size: cover;
         repeat: no-repeat;
-        position: top;
+        // position: center;
         attachment: fixed;
+        image: url("/img/sample-image-1.jpeg");
     }
 
     .mask {
