--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2744,8 +2744,8 @@ a {
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: top;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  background-image: url("/img/sample-image-1.jpeg"); }
   .parallax .mask {
     position: absolute;
     top: 0;
