--- a/scss/module_animation/gridbox-parallax.scss
+++ b/scss/module_animation/gridbox-parallax.scss
@@ -5,7 +5,7 @@
         repeat: no-repeat;
         // position: center;
         attachment: fixed;
-        image: url("/img/sample-image-1.jpeg");
+        image: url("/img/sample-image-1.jpg");
     }
 
     .mask {
