--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2745,7 +2745,7 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-image: url("/img/sample-image-1.jpeg"); }
+  background-image: url("/img/sample-image-1.jpg"); }
   .parallax .mask {
     position: absolute;
     top: 0;
