--- a/scss/module_animation/gridbox-parallax.scss
+++ b/scss/module_animation/gridbox-parallax.scss
@@ -1,11 +1,22 @@
 .parallax {
     position: relative;
     background: {
+        repeat: no-repeat;  
+        position: center;
         size: cover;
-        repeat: no-repeat;
-        // position: center;
         attachment: fixed;
-        image: url("/img/sample-image-1.jpg");
+    }
+
+    &.vertical {
+        background: {
+            size: 100% auto !important;
+        }
+    }
+
+    &.horizontal {
+        background: {
+            size: 115% auto !important;
+        }
     }
 
     .mask {
