--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2576,32 +2576,6 @@ a {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
 
-.parallax {
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-perspective: 1px;
-  perspective: 1px; }
-  .parallax .parallax-back {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    -webkit-transform: translateZ(-1px) scale(2);
-    transform: translateZ(-1px) scale(2); }
-    .parallax .parallax-back img {
-      display: block;
-      min-width: 100%;
-      height: 100%; }
-  .parallax .parallax-fore {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    -webkit-transform: translateZ(0px);
-    transform: translateZ(0px); }
-
 .carousel {
   position: relative;
   width: 100%;
@@ -2742,10 +2716,14 @@ a {
 
 .parallax {
   position: relative;
-  background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-image: url("/img/sample-image-1.jpg"); }
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed; }
+  .parallax.vertical {
+    background-size: 100% auto !important; }
+  .parallax.horizontal {
+    background-size: 115% auto !important; }
   .parallax .mask {
     position: absolute;
     top: 0;
