--- a/scss/module_animation/gridbox-parallax.scss
+++ b/scss/module_animation/gridbox-parallax.scss
@@ -1,22 +1,43 @@
+// .parallax {
+//     position: relative;
+//     background: {
+//         repeat: no-repeat;  
+//         position: center;
+//         size: cover;
+//         attachment: fixed;
+//     }
+
+//     &.vertical {
+//         background: {
+//             size: 100% auto !important;
+//         }
+//     }
+
+//     &.horizontal {
+//         background: {
+//             size: 115% auto !important;
+//         }
+//     }
+
+//     .mask {
+//         position: absolute;
+//         top: 0;
+//         bottom: 0;
+//         left: 0;
+//         width: 100%;
+//         z-index: -1;
+//     }
+// }
+
+
 .parallax {
     position: relative;
-    background: {
-        repeat: no-repeat;  
-        position: center;
-        size: cover;
-        attachment: fixed;
-    }
+    background: transparent;
 
-    &.vertical {
-        background: {
-            size: 100% auto !important;
-        }
-    }
-
-    &.horizontal {
-        background: {
-            size: 115% auto !important;
-        }
+    .bg {
+        display: block;
+        position: fixed;
+        z-index: -10;
     }
 
     .mask {
