fix scroll jittering issue

--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2720,6 +2720,7 @@ a {
   .parallax .bg {
     display: block;
     position: fixed;
+    will-change: transform;
     z-index: -10; }
   .parallax .mask {
     position: absolute;
