--- a/scss/module_animation/gridbox-parallax.scss
+++ b/scss/module_animation/gridbox-parallax.scss
@@ -1,35 +1,3 @@
-// .parallax {
-//     position: relative;
-//     background: {
-//         repeat: no-repeat;  
-//         position: center;
-//         size: cover;
-//         attachment: fixed;
-//     }
-
-//     &.vertical {
-//         background: {
-//             size: 100% auto !important;
-//         }
-//     }
-
-//     &.horizontal {
-//         background: {
-//             size: 115% auto !important;
-//         }
-//     }
-
-//     .mask {
-//         position: absolute;
-//         top: 0;
-//         bottom: 0;
-//         left: 0;
-//         width: 100%;
-//         z-index: -1;
-//     }
-// }
-
-
 .parallax {
     position: relative;
     background: transparent;
@@ -37,6 +5,7 @@
     .bg {
         display: block;
         position: fixed;
+        will-change: transform;
         z-index: -10;
     }
 
