add Modal template

--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -36,6 +36,7 @@ html {
 @import './module_showcase/gridbox-showcase';
 @import './module_carousel/gridbox-carousel';
 @import './module_card/gridbox-card';
+@import './module_modal/gridbox-modal';
 
 // load effect modules
 @import './module_animation/gridbox-parallax';
