--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2716,6 +2716,75 @@ a {
     bottom: 15px;
     text-align: center; }
 
+.modal {
+  display: block;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(83, 83, 83, 0.4);
+  pointer-events: none;
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  z-index: 99; }
+  .modal.show {
+    opacity: 1;
+    pointer-events: auto; }
+
+.modal-box {
+  position: absolute;
+  padding: 25px 35px;
+  width: 65%;
+  min-width: 250px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -100%);
+  -ms-transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
+  background: #fff;
+  -webkit-box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 10px -5px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s; }
+  .modal-box.slide-in {
+    opacity: 1;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+
+.modal-title,
+.modal-content {
+  position: relative;
+  margin-bottom: 30px; }
+  .modal-title:after,
+  .modal-content:after {
+    content: "";
+    position: absolute;
+    top: calc( 100% + 15px);
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: rgba(0, 0, 0, 0.1); }
+
+.modal-actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  margin-top: 35px; }
+  .modal-actions .btn {
+    margin-right: 15px; }
+    .modal-actions .btn:last-child {
+      margin-right: 0; }
+
 .parallax {
   position: relative;
   background: transparent; }
