add footer template

--- a/scss/gridbox.scss
+++ b/scss/gridbox.scss
@@ -37,6 +37,7 @@ html {
 @import './module_carousel/gridbox-carousel';
 @import './module_card/gridbox-card';
 @import './module_modal/gridbox-modal';
+@import './module_footer/gridbox-footer';
 
 // load effect modules
 @import './module_animation/gridbox-parallax';
