--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2787,6 +2787,84 @@ a {
     .modal-actions .btn:last-child {
       margin-right: 0; }
 
+.footer, .footer-fixed, .footer-revealed {
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: rgba(0, 0, 0, 0.6); }
+
+.footer {
+  position: relative; }
+  .footer-fixed {
+    position: fixed;
+    z-index: -1; }
+  .footer-revealed {
+    position: absolute;
+    z-index: -1; }
+
+.copyright {
+  position: relative;
+  width: 100%;
+  padding: 30px 0 15px 0;
+  text-align: center;
+  font-size: 0.9rem; }
+  .copyright::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    width: 70%;
+    height: 1px;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.2); }
+
+.wg-social .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
+  flex-flow: row wrap;
+  z-index: 1; }
+  .wg-social .icons .icon {
+    display: inline-block;
+    position: relative;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 50px;
+    flex: 0 0 50px;
+    padding: 15px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    line-height: 25px;
+    z-index: 1;
+    color: rgba(0, 0, 0, 0.6); }
+    .wg-social .icons .icon::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 35px;
+      height: 35px;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      border-radius: 5px;
+      z-index: -1;
+      background: transparent;
+      -webkit-transition: all 0.1s;
+      -o-transition: all 0.1s;
+      transition: all 0.1s; }
+    .wg-social .icons .icon:hover {
+      color: #000; }
+      .wg-social .icons .icon:hover::before {
+        background: #fff; }
+
 .parallax {
   position: relative;
   background: transparent; }
