--- a/scss/module_footer/gridbox-footer.scss
+++ b/scss/module_footer/gridbox-footer.scss
@@ -11,14 +11,14 @@
     position: relative;
     @extend %footer;
     
-    &-fixed {
-        position: fixed;
-        @extend %footer;
-        z-index: -1;
-    }
+    // &-fixed {
+    //     position: fixed;
+    //     @extend %footer;
+    //     z-index: -1;
+    // }
 
-    &-revealed {
-        position: absolute;
+    &-reveal {
+        position: fixed !important;
         @extend %footer;
         z-index: -1;
     }
