--- a/scss/module_footer/gridbox-footer.scss
+++ b/scss/module_footer/gridbox-footer.scss
@@ -44,3 +44,7 @@
 
 // load widgets
 @import './gridbox-footer-widget';
+@import './gridbox-footer-widget-social';
+@import './gridbox-footer-widget-textbox';
+@import './gridbox-footer-widget-form';
+@import './gridbox-footer-widget-map';
