--- a/scss/module_core/gridbox-font.scss
+++ b/scss/module_core/gridbox-font.scss
@@ -10,6 +10,10 @@
 //  * ========================================================================
 //  */
 
+.thin {
+    font-weight: 300;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -59,5 +63,32 @@
 }
 
 .offblack {
+    color: $offBlack;
+}
+
+
+// /* =======================================================================
+//  *                            Section Title
+//  * -----------------------------------------------------------------------
+//  * Description:    
+//  *                 
+//  *                 
+//  * -----------------------------------------------------------------------
+//  * Ussage:         Can be applied to any text element
+//  * ========================================================================
+//  */
+
+.section-title {
+    font: {
+        size: 2.7rem;
+        weight: 400;
+    }
+}
+
+.section-subtitle {
+    font: {
+        size: 1rem;
+        weight: 400;
+    }
     color: $offBlack;
 }
