--- a/scss/module_core/gridbox-core.scss
+++ b/scss/module_core/gridbox-core.scss
@@ -7,3 +7,52 @@
 @import 'gridbox-stack';
 
 
+.box-shadow {
+    box-shadow: 0px 2px 10px -5px rgba(0, 0, 0, 0.3);
+}
+
+.box-shadow-stronger {
+    box-shadow: 0px 2px 20px -5px rgba(0, 0, 0, 0.3);
+}
+
+.offset-x {
+    transform: translateX(15px);
+    &-30 {
+        transform: translateX(30px);
+    }
+    &-45 {
+        transform: translateX(45px);
+    }
+}
+
+.offset-x-reverse {
+    transform: translateX(-15px);
+    &-30 {
+        transform: translateX(-30px);
+    }
+    &-45 {
+        transform: translateX(-45px);
+    }
+}
+
+.offset-y {
+    transform: translateY(15px);
+    &-30 {
+        transform: translateY(30px);
+    }
+    &-45 {
+        transform: translateY(45px);
+    }
+}
+
+.offset-y-reverse {
+    transform: translateY(-15px);
+    &-30 {
+        transform: translateY(-30px);
+    }
+    &-45 {
+        transform: translateY(-45px);
+    }
+}
+
+
