--- a/scss/module_core/gridbox-font.scss
+++ b/scss/module_core/gridbox-font.scss
@@ -79,6 +79,9 @@
 //  */
 
 .section-title {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
     font: {
         size: 2.7rem;
         weight: 400;
@@ -86,6 +89,9 @@
 }
 
 .section-subtitle {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
     font: {
         size: 1rem;
         weight: 400;
