--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -147,8 +147,36 @@ html {
   .full-screen-fixed {
     position: fixed; }
 
-.full-width {
+.full-width,
+.w-10 {
   width: 100%; }
+
+.w-1 {
+  width: 10%; }
+
+.w-2 {
+  width: 20%; }
+
+.w-3 {
+  width: 30%; }
+
+.w-4 {
+  width: 40%; }
+
+.w-5 {
+  width: 50%; }
+
+.w-6 {
+  width: 60%; }
+
+.w-7 {
+  width: 70%; }
+
+.w-8 {
+  width: 80%; }
+
+.w-9 {
+  width: 90%; }
 
 .rectangle-43 {
   width: 200px;
@@ -2146,7 +2174,8 @@ a.sub-toggle::before, a.sub-toggle::after {
 .carousel {
   position: relative;
   width: 100%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  z-index: 1; }
   .carousel .toggle {
     position: absolute;
     width: 100%;
@@ -2154,7 +2183,7 @@ a.sub-toggle::before, a.sub-toggle::after {
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    z-index: 20; }
+    z-index: 10; }
     .carousel .toggle .left span, .carousel .toggle .right span {
       display: block;
       position: absolute;
@@ -2199,12 +2228,7 @@ a.sub-toggle::before, a.sub-toggle::after {
   .carousel .indicator {
     display: inline-block;
     position: absolute;
-    left: 50%;
-    bottom: 25px;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    z-index: 20; }
+    z-index: 10; }
     .carousel .indicator span {
       display: inline-block;
       width: 25px;
@@ -2221,6 +2245,17 @@ a.sub-toggle::before, a.sub-toggle::after {
         background: #1e88e5; }
       .carousel .indicator span.active {
         background: #1e88e5; }
+      .carousel .indicator span.with-text {
+        width: auto !important;
+        height: auto !important;
+        padding: 15px 25px 5px 25px;
+        margin-right: 15px;
+        background: none;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.2); }
+        .carousel .indicator span.with-text:last-of-type {
+          margin-right: 0px; }
+        .carousel .indicator span.with-text.active {
+          border-bottom: 2px solid #1e88e5; }
 
 .showcase {
   opacity: 1;
