--- a/scss/module_carousel/gridbox-carousel.scss
+++ b/scss/module_carousel/gridbox-carousel.scss
@@ -3,13 +3,14 @@
     position: relative;
     width: 100%;
     overflow-x: hidden;
+    z-index: 1;
 
     .toggle {
         position: absolute;
         width: 100%;
         top: 50%;
         transform: translateY(-50%);
-        z-index: 20;
+        z-index: 10;
 
         %arrow {
             display: block;
@@ -66,10 +67,7 @@
     .indicator {
         display: inline-block;
         position: absolute;
-        left: 50%;
-        bottom: 25px;
-        transform: translateX(-50%);
-        z-index: 20;
+        z-index: 10;
 
         span {
             display: inline-block;
@@ -91,8 +89,27 @@
             &.active {
                 background: $information;
             }
+
+            &.with-text {
+                width: auto !important;
+                height: auto !important;
+                padding: 15px 25px 5px 25px;
+                margin-right: 15px;
+                background: none;
+                border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+
+                &:last-of-type {
+                    margin-right: 0px;
+                }
+
+                &.active {
+                    border-bottom: 2px solid $information;
+                }
+            }
         }
     }
+
+    
 }
 
 
