--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -152,31 +152,31 @@ html {
   width: 100%; }
 
 .w-1 {
-  width: 10%; }
+  width: 10% !important; }
 
 .w-2 {
-  width: 20%; }
+  width: 20% !important; }
 
 .w-3 {
-  width: 30%; }
+  width: 30% !important; }
 
 .w-4 {
-  width: 40%; }
+  width: 40% !important; }
 
 .w-5 {
-  width: 50%; }
+  width: 50% !important; }
 
 .w-6 {
-  width: 60%; }
+  width: 60% !important; }
 
 .w-7 {
-  width: 70%; }
+  width: 70% !important; }
 
 .w-8 {
-  width: 80%; }
+  width: 80% !important; }
 
 .w-9 {
-  width: 90%; }
+  width: 90% !important; }
 
 .rectangle-43 {
   width: 200px;
@@ -548,9 +548,11 @@ html {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  width: 100%;
-  /* height: 100%;
-    background: #fafafa; */ }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  width: 100%; }
 
 .row-reverse {
   -webkit-box-orient: horizontal;
