--- a/scss/grid_layout_core/grid-layout-core.scss
+++ b/scss/grid_layout_core/grid-layout-core.scss
@@ -41,9 +41,8 @@
 .row {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     width: 100%;
-    /* height: 100%;
-    background: #fafafa; */
 }
 
 .row-reverse {
