--- a/scss/module_core/gridbox-dimension.scss
+++ b/scss/module_core/gridbox-dimension.scss
@@ -36,7 +36,7 @@
 @mixin boxWidth($max) {
     @for $width from 1 to $max {
         .w-#{$width} {
-            width: $width * 10%;
+            width: $width * 10% !important;
         }
     }
 }
