--- a/scss/module_core/gridbox-position.scss
+++ b/scss/module_core/gridbox-position.scss
@@ -22,6 +22,27 @@
     position: relative !important;
 }
 
+
+// /* =======================================================================
+//  *                              Text Align
+//  * -----------------------------------------------------------------------
+//  * Description:    align text
+//  * -----------------------------------------------------------------------
+//  * Ussage:         Can be applied to any text box element
+//  * ========================================================================
+//  */
+.center-text {
+    text-align: center;
+}
+
+.text-align-left {
+    text-align: left;
+}
+
+.text-align-right {
+    text-align: right;
+}
+
 // /* =======================================================================
 //  *                              Locations
 //  * -----------------------------------------------------------------------
