--- a/css/gridbox.css
+++ b/css/gridbox.css
@@ -2214,7 +2214,7 @@ a.sub-toggle::before, a.sub-toggle::after {
     -o-transition: all 0.1s;
     transition: all 0.1s; }
 
-.showcase, .showcase-carousel, .showcase-full-screen, .showcase-narrow {
+.showcase, .showcase-carousel, .showcase-full-screen, .showcase-narrow, .showcase-video {
   position: relative;
   width: 100%;
   overflow: hidden; }
@@ -2227,25 +2227,8 @@ a.sub-toggle::before, a.sub-toggle::after {
     height: 100vh; }
   .showcase-narrow {
     height: 300px; }
-
-.hero-image {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  z-index: 1; }
-  .hero-image img {
-    display: block;
-    width: 100%;
-    min-width: 900px;
-    height: auto;
-    min-height: 80vh; }
-  .hero-image .mask {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: 0.05;
-    z-index: 2; }
+  .showcase-video {
+    height: 100vh; }
 
 .text-content {
   position: absolute;
@@ -2276,6 +2259,44 @@ a.sub-toggle::before, a.sub-toggle::after {
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
+
+.hero-image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1; }
+  .hero-image img {
+    display: block;
+    width: 100%;
+    min-width: 900px;
+    height: auto;
+    min-height: 80vh; }
+  .hero-image .mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.05;
+    z-index: 2; }
+
+.hero-video {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  z-index: 1; }
+  .hero-video video,
+  .hero-video iframe {
+    position: absolute;
+    width: auto;
+    height: auto;
+    min-width: 100%;
+    min-height: 100%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: 1; }
 
 .carousel {
   position: relative;
